meta-data/scoreboard/objects/Game__c.object
<CustomObject>
    <description>Custom Object for Individual Game Tracking</description>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quarter_1_Score_Team_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quarter 1 Score Team 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter_1_Score_Team_2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quarter 1 Score Team 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter_2_Score_Team_1__c</fullName>
        <label>Quarter 2 Score Team 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sport</label>
        <referenceTo>Sport__c</referenceTo>
        <relationshipLabel>Games</relationshipLabel>
        <relationshipName>Games</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_1_Total_Score__c</fullName>
        <formula>Quarter_1_Score_Team_1__c +  Quarter_2_Score_Team_1__c +  Quarter_3_Score_Team_1__c +  Quarter_4_Score_Team_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team 1 Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team 1</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Games</relationshipLabel>
        <relationshipName>Games</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_2_Total_Score__c</fullName>
        <formula>Quarter_1_Score_Team_2__c +  Quarter_2_Score_Team_2__c +  Quarter_3_Score_Team_2__c +  Quarter_4_Score_Team_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team 2 Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team 2</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Games (Team 2)</relationshipLabel>
        <relationshipName>Games1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Game</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Game-{000000}</displayFormat>
        <label>Game Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Games</pluralLabel>
    <recordTypes>
        <fullName>Baseball</fullName>
        <active>true</active>
        <description>Record Type for Baseball</description>
        <label>Baseball</label>
    </recordTypes>
    <recordTypes>
        <fullName>Basketball</fullName>
        <active>true</active>
        <description>Record Type for Basketball</description>
        <label>Basketball</label>
    </recordTypes>
    <recordTypes>
        <fullName>Soccer</fullName>
        <active>true</active>
        <description>RT for Soccer Game</description>
        <label>Soccer</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>